openshift.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      kubernetes.io/tls-acme: "true"
    name: pooltund
  spec:
    host: pooltund.improv.ee
    port:
      targetPort: webserver
    tls:
      certificate:
      insecureEdgeTerminationPolicy: Redirect
      key:
      termination: edge
    to:
      kind: Service
      name: pooltund
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-05-27T10:42:05Z
        status: "True"
        type: Admitted
      host: pooltund.improv.ee
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: cdn-pooltund
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 50G
    volumeName: cdn-pooltund
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    labels:
      app: pooltund
    name: pooltund
  spec:
    ports:
    - name: webserver
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: pooltund
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    generation: 1
    labels:
      app: pooltund
    name: pooltund
  spec:
    replicas: 2
    selector:
      app: pooltund
      deploymentconfig: pooltund
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: pooltund
          deploymentconfig: pooltund
      spec:
        containers:
        - image: anroots/pooltund.improv.ee@sha256:47a05c21e7db476a55ec422087a11cf5a31a34ade961ee9bccca225b865a648f
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: pooltund
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 20Mi
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /usr/share/nginx/html/mp3
            name: cdn-pooltund
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: cdn-pooltund
          persistentVolumeClaim:
            claimName: cdn-pooltund
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - pooltund
        from:
          kind: ImageStreamTag
          name: pooltund:latest
          namespace: improv-ee
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
kind: List
metadata: {}
